--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_FECHA = 08-04-2023
 REACT_APP_NOMBRE = Ariana
+REACT_APP_HORARIO = 21hs a 4hs
 REACT_APP_MAPS = https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3581.0999155388195!2d-58.18362500060001!3d-26.1608752721313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945ca5e2dcba5f99%3A0x763e59cbd1ce8078!2sComplejo%20Los%20Cocos!5e0!3m2!1ses-419!2sar!4v1674329717580!5m2!1ses-419!2sar
