--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-REACT_APP_FECHA = 08-04-2023
-REACT_APP_NOMBRE = Ariana
-REACT_APP_HORARIO = 21hs a 4hs
-REACT_APP_MAPS = https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3581.0999155388195!2d-58.18362500060001!3d-26.1608752721313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945ca5e2dcba5f99%3A0x763e59cbd1ce8078!2sComplejo%20Los%20Cocos!5e0!3m2!1ses-419!2sar!4v1674329717580!5m2!1ses-419!2sar
-REACT_APP_APIKEY = AIzaSyAAmMW1SHWkwyBdaNbrdnUdRMsta0mcs7Y
-REACT_APP_AUTHDOMAIN = invitationcard-87599.firebaseapp.com
-REACT_APP_PROJECTID = invitationcard-87599
-REACT_APP_STORAGEBUCKET = invitationcard-87599.appspot.com
-REACT_APP_MESSAGINGSENDERID = 178008119638
-REACT_APP_APPID = 1:178008119638:web:d00a7bbe690a2f43cfdef7
+REACT_APP_FECHA = 01-04-2023
+REACT_APP_NOMBRE = Ayrton
+REACT_APP_HORARIO = 15:30hs a 20hs
+REACT_APP_MAPS = https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3580.228850937513!2d-58.20714468546986!3d-26.189232769724057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945caf4f4074e0b7%3A0x5aa78313006f207d!2sAv.%20Juan%20de%20Pueyrred%C3%B3n%20355%2C%20Formosa!5e0!3m2!1ses-419!2sar!4v1679406515527!5m2!1ses-419!2sar
+REACT_APP_APIKEY = AIzaSyAcoQpcLNGZm51YUv8bo3px-jTIgYPOZzE
+REACT_APP_AUTHDOMAIN = invitationcardmario.firebaseapp.com
+REACT_APP_PROJECTID = invitationcardmario
+REACT_APP_STORAGEBUCKET = invitationcardmario.appspot.com
+REACT_APP_MESSAGINGSENDERID = 1094063114211
+REACT_APP_APPID = 1:1094063114211:web:993661fe32fb8b04ae02d6
 
